Closed Bug 1083814 Opened 11 years ago Closed 11 years ago

crash @nsContentUtils::HasDistributedChildren

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: MatsPalmgren_bugz, Assigned: wchen)

References

Details

Attachments

(1 file)

In bug 907396, I ran into a crash ('shadow' is null) at line 6843 here: http://hg.mozilla.org/mozilla-central/annotate/01f04d75519d/content/base/src/nsContentUtils.cpp#l6832 If 'shadow' is non-null we would have already returned on line 6836.
William, can you take this? (your suggested fix works for me)
Assignee: nobody → wchen
Blocks: 907396
Comment on attachment 8506425 [details] [diff] [review] Fix nsContentUtils::HasDistributedChildren for children of <shadow> insertion point. oops :)
Attachment #8506425 - Flags: review?(bugs) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: