Bug 1083814 - Fix nsContentUtils::HasDistributedChildren for children of <shadow> insertion point. r=smaug

--HG--
extra : rebase_source : e22e2958668fd125deb2f64818ed4cd68e32a96e